# httpmock

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FUNDING.json  LICENSE  Makefile  README.md  RELEASES.md  azure-pipelines.yml  banner.afdesign  deny.toml  docker-compose.yml  funding.json  gitlab-ci.yml  go.mod  rustfmt.toml  tarpaulin.full.toml  tarpaulin.https.toml  tarpaulin.toml  tea.yaml
.ci/: coverage.yml  default.yml  install-rust.yml
.github/: dependabot.yml
.github/workflows/: all-features-test.yml  build-branch.yml  build-master.yml  build.yml  coverage-master.yml  coverage.yml  deploy-docs.yml  docker-release.yml  docker.yml  full-build.yml  issue-cleanup.yml  paranoid-test.yml
assets/: Logo.afdesign
certs/: ca.key  ca.pem
components/macros/: Cargo.toml
components/standalone/: Cargo.toml  Dockerfile
components/standalone/src/: main.rs
docs/: .gitignore
docs/assets/: Logo-design.afdesign
docs/httpmock/src/library_usage/: deleting_mocks.md
docs/httpmock/src/standalone/: standalone_limitations.md  start_standalone_server.md  static_mocks_yaml_files.md  why_standalone.md
docs/httpmock/src/technical_details/: synchronous_ans_asynchronous_api.md
docs/website/: astro.config.mjs  package-lock.json  package.json
docs/website/tools/: generate-docs.cjs
lib/macros/: Cargo.toml  README.md
lib/macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: generate_tarpaulin_config.sh  run_tarpaulin_tests.sh  run_tarpaulin_tests_limited.sh  test_all_feature_sets.sh
src/: asynchronous.rs  data.rs  lib.rs  main.rs  new_pool.rs  pool.rs  routes.rs  standalone.rs  util.rs
src/api/: adapter.rs  adapters.rs  encoding.rs  mock.rs  mod.rs  output.rs  proxy.rs  server.rs  spec.rs
src/api/adapter/: local.rs  mod.rs  remote.rs  standalone.rs
src/api/adapters/: http.rs  local.rs  mod.rs
src/common/: data.rs  http.rs  mod.rs  runtime.rs  util.rs
src/handlers/: mocks.rs  mod.rs
src/routes/: admin.rs  mock.rs  mocks.rs  mod.rs
src/server/: builder.rs  data.rs  handler.rs  handlers.rs  io.rs  mod.rs  persistence.rs  proxy.rs  router.rs  routes.rs  server.rs  state.rs  tls.rs  util.rs
src/server/handlers/: mocks.rs  mod.rs
src/server/matchers/: _delete_me.rs  body_contains_matcher.rs  body_json_includes_matcher.rs  body_json_matcher.rs  body_matcher.rs  body_regex_matcher.rs  comparators.rs  comparison.rs  cookie_exists_matcher.rs  cookie_matcher.rs  custom_function_matcher.rs  decoders.rs  generic.rs  header_exists_matcher.rs  header_matcher.rs  method_matcher.rs  mod.rs  path_contains_matcher.rs  path_matcher.rs  path_regex_matcher.rs  query_parameter_exists_matcher.rs  query_parameter_matcher.rs  readers.rs  sources.rs  targets.rs  transformers.rs  util.rs
src/server/routes/: admin.rs  mock.rs  mocks.rs  mod.rs
src/server/util/: http.rs  mod.rs  std.rs
src/server/web/: handlers.rs  mod.rs  routes.rs
src/util/: std.rs
tests/: api_tests.rs  body_matching_tests.rs  body_tests.rs  cookie_tests.rs  delay_tests.rs  delete_mock_tests.rs  example_tests.rs  getting_started_tests.rs  header_matching_tests.rs  headers_tests.rs  integration_tests.rs  json_body_tests.rs  lib.rs  mod.rs  multiserver_redirect_tests.rs  multiserver_tests.rs  request_matcher_tests.rs  server_tests.rs  showcase_tests.rs  standalone_tests.rs  tests.rs  url_matching_tests.rs
tests/classic_api/: delay_tests.rs  headers_tests.rs  mod.rs  multiserver_redirect_tests.rs  showcase_tests.rs  standalone_tests.rs
tests/common/: mod.rs
tests/default_api/: binary_body_tests.rs  body_tests.rs  cookie_tests.rs  delay_tests.rs  delete_mock_tests.rs  file_body_tests.rs  getting_started_tests.rs  headers_tests.rs  json_body_tests.rs  mod.rs  multiserver_tests.rs  query_param_tests.rs  redirect_tests.rs  standalone_tests.rs  url_matching_tests.rs
tests/deprecated/: binary_body_tests.rs  file_body_tests.rs  getting_started_tests.rs  query_param_tests.rs
tests/examples/: binary_body_tests.rs  cookie_tests.rs  custom_request_matcher_tests.rs  delay_tests.rs  delete_mock_tests.rs  encoding_tests.rs  file_body_tests.rs  forwarding_tests.rs  getting_started_tests.rs  headers_tests.rs  https_tests.rs  json_body_tests.rs  mass_tests.rs  mod.rs  multi_server_tests.rs  multiserver_tests.rs  new_f.rs  oo.rs  proxy_tests.rs  query_param_tests.rs  record_and_playback_tests.rs  redirect_tests.rs  reset_tests.rs  showcase_tests.rs  standalone_tests.rs  string_body_tests.rs  url_matching_tests.rs  x_www_form_urlencoded_body_tests.rs  x_www_form_urlencoded_tests.rs
tests/expect_return_api/: binary_body_tests.rs  cookie_tests.rs  delay_tests.rs  delete_mock_tests.rs  file_body_tests.rs  getting_started_tests.rs  json_body_tests.rs  mod.rs  multiserver_tests.rs  query_param_tests.rs  redirect_tests.rs  standalone_tests.rs  string_body_tests.rs  url_matching_tests.rs
tests/internal/: binary_body_tests.rs  cookie_tests.rs  extensions_test.rs  large_body_test.rs  loop_test.rs  mod.rs  nearest_request_tests.rs  runtimes_test.rs
tests/internal/deprecated/: binary_body_tests.rs  cookie_tests.rs  delay_tests.rs  delete_mock_tests.rs  file_body_tests.rs  getting_started_tests.rs  headers_tests.rs  json_body_tests.rs  multiserver_tests.rs  query_param_tests.rs  redirect_tests.rs  showcase_tests.rs  standalone_tests.rs  string_body_tests.rs  url_matching_tests.rs
tests/matchers/: body.rs  cookies.rs  headers.rs  host.rs  method.rs  mod.rs  path.rs  port.rs  query_param.rs  scheme.rs  urlencoded_body.rs
tests/misc/: extensions_test.rs  large_body_test.rs  loop_test.rs  mod.rs  runtimes_test.rs
tests/resources/: simple_body.txt  simple_static_mock.yaml  static_yaml_mock.yaml
tests/utils/: http.rs
tests/when_then_api/: body_tests.rs  cookie_tests.rs  delay_tests.rs  delete_mock_tests.rs  getting_started_tests.rs  headers_tests.rs  json_body_tests.rs  mod.rs  multiserver_redirect_tests.rs  query_param_tests.rs  showcase_tests.rs  standalone_tests.rs  url_matching_tests.rs
tools/: Cargo.toml
tools/src/: extract_code.rs  extract_docs.rs  extract_example_tests.rs  extract_groups.rs
(+49 files in other folders)
