[package]
name = "httpmock"
version = "0.7.1"
authors = ["Alexander Liesenfeld <alexander.liesenfeld@outlook.com>"]
edition = "2018"
description = "HTTP mocking library for Rust"
readme = "README.md"
keywords = ["http", "mock", "test"]
categories = ["development-tools::testing"]
license = "MIT"
repository = "https://github.com/alexliesenfeld/httpmock"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1"
lazy_static = "1.4"
base64 = "0.21"
regex = "1.10"
log = "0.4"
url = "2.5"
assert-json-diff = "2.0"
async-trait = "0.1"
async-object-pool = "0.1"
crossbeam-utils = "0.8"
futures-util = "0.3"
similar = "2.4"
levenshtein = "1.0"
form_urlencoded = "1.2"

hyper = { version = "1.1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread", "signal"] }

isahc = { version = "1.7",  optional = true }
basic-cookies = { version = "0.1", optional = true }
colored = { version = "2.1", optional = true }
clap = { version = "4.4", features = ["derive", "env"], optional = true }
env_logger = { version = "0.10", optional = true }
serde_yaml = { version = "0.9", optional = true }
async-std = { version = "1.12", features = ["attributes", "unstable"] }

[dev-dependencies]
env_logger = "0.10"
tokio-test = "0.4"
quote = "1.0"
actix-rt = "2.9"
colored = "2.1"
ureq = "2.9"

isahc = { version = "1.7", features = ["json"] }
syn = { version = "2.0", features = ["full"] }

reqwest = "0.11"

[features]
default = ["cookies", "proxy"]
standalone = ["clap", "env_logger", "serde_yaml", "remote"]
color = ["colored"]
cookies = ["basic-cookies"]
remote = ["isahc"]
proxy = ["hyper-util/client"]

[[bin]]
name = "httpmock"
required-features = ["standalone"]

[package.metadata.docs.rs]
all-features = true