[package]
name = "tools"
version = "0.1.0"
edition = "2018"

[dependencies]
httpmock = { path = ".." , features = ["default", "standalone", "color", "cookies", "remote", "remote-https", "proxy", "https", "http2", "record", "experimental"]}
serde_json = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = {  version = "1.0", features = ["default", "span-locations"] }
quote = "1.0"

[[bin]]
name = "extract_docs"
path = "src/extract_docs.rs"

[[bin]]
name = "extract_code"
path = "src/extract_code.rs"

[[bin]]
name = "extract_groups"
path = "src/extract_groups.rs"

[[bin]]
name = "extract_example_tests"
path = "src/extract_example_tests.rs"